feat: implement payment retrieval by ID and update wallet user ID han… (#692)
